[package]
name = "dart-semver"
description = "Rust crate for parsing dart sdk's semver"
version = "0.2.0"
authors = ["Yakiyo <yakiyo1206@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Yakiyo/dart-semver.rs"
repository = "https://github.com/Yakiyo/dart-semver.rs"
documentation = "https://docs.rs/dart-semver"
readme = "README.md"
exclude = [
    ".devcontainer/*",
    ".github/*",
    ".gitignore",
    "CODE_OF_CONDUCT.md"
]

[dependencies]
pest = "2.7.0"
pest_derive = "2.7.0"
